# open_trace_analyzer

./: .clang-tidy  .clang-uml  .gitignore  .gitmodules  CMakeLists.txt  LICENCE  annotated.html  app_8cpp.html  app_8cpp__incl.map  app_8cpp__incl.md5  app_8cpp_source.html  app_8hpp.html  app_8hpp__dep__incl.map  app_8hpp__dep__incl.md5  app_8hpp__incl.map  app_8hpp__incl.md5  app_8hpp_source.html  classapplication_1_1App-members.html  classapplication_1_1App.html  classapplication_1_1App_a0a66c162e2075e887da402231ac909cd_cgraph.map  classapplication_1_1App_a0a66c162e2075e887da402231ac909cd_cgraph.md5  classapplication_1_1App_aa6986455a908daea61f94fac013be841_cgraph.map  classapplication_1_1App_aa6986455a908daea61f94fac013be841_cgraph.md5  classapplication_1_1calculation_1_1TaskTimingCalculator-members.html  classapplication_1_1calculation_1_1TaskTimingCalculator.html  classapplication_1_1calculation_1_1TaskTimingCalculator_a810b17e9e3026f4cfbfa14ca2be58566_icgraph.map  classapplication_1_1calculation_1_1TaskTimingCalculator_a810b17e9e3026f4cfbfa14ca2be58566_icgraph.md5  classapplication_1_1calculation_1_1TaskTimingCalculator_aa6da02414044ae9d39dc4ae68a278eda_cgraph.map  classapplication_1_1calculation_1_1TaskTimingCalculator_aa6da02414044ae9d39dc4ae68a278eda_cgraph.md5  classes.html  classexport__data_1_1seq__diagram_1_1ISeqDiagram-members.html  classexport__data_1_1seq__diagram_1_1ISeqDiagram.html  classexport__data_1_1seq__diagram_1_1ISeqDiagram__inherit__graph.map  classexport__data_1_1seq__diagram_1_1ISeqDiagram__inherit__graph.md5  classexport__data_1_1seq__diagram_1_1ISeqDiagram_a4787c2dfac713875e2bc8def190cd212_icgraph.map  classexport__data_1_1seq__diagram_1_1ISeqDiagram_a4787c2dfac713875e2bc8def190cd212_icgraph.md5  classexport__data_1_1seq__diagram_1_1ISeqDiagram_a7a36578292a356492266b4995882d57b_icgraph.map  classexport__data_1_1seq__diagram_1_1ISeqDiagram_a7a36578292a356492266b4995882d57b_icgraph.md5  classexport__data_1_1seq__diagram_1_1ISeqDiagram_a7b2d5a498f5b60f10565b7dd9dc261bd_icgraph.map  classexport__data_1_1seq__diagram_1_1ISeqDiagram_a7b2d5a498f5b60f10565b7dd9dc261bd_icgraph.md5  (+710 more)
.github/workflows/: doxygen.yml
doc/: Doxyfile  mainpage.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+56 more)
src/: CMakeLists.txt  main.cpp
src/3d_party/: CMakeLists.txt
src/application/: app.cpp  app.hpp  manager.cpp  manager.hpp
src/application/configuration/: config_handler.cpp  config_handler.hpp  config_types.hpp
src/application/configuration/test/: invalid_input_type.json  invalid_output_type.json  no_input_file.json  uint_test.cpp  valid_config.json  valid_config_defaults.json
src/application/configuration/txt_config/: event_message.hpp  state_machine.hpp  task_switch.hpp  txt_config.hpp
src/application/export/sequence_diagram/: i_export_sequence.hpp
src/application/export/sequence_diagram/puml/: export_puml.cpp  export_puml.hpp  export_puml_timing.cpp  export_puml_timing.hpp
src/application/import/task_objects/: i_import_object.hpp  import_object.cpp  import_object.hpp
src/application/import/trace_files/: i_import_trace.hpp  import_trace.cpp  import_trace.hpp
src/application/import/trace_files/txt_import/: import_trace.cpp  import_trace.hpp
src/application/task_object/: task_object.cpp  task_object.hpp  test.cpp
src/application/task_timing/: task_timing_calc.cpp  task_timing_calc.hpp
src/application/trace_entry/: trace_entry.cpp  trace_entry.hpp
src/application/trace_entry/event_message/: event_message.cpp  event_message.hpp
src/application/trace_entry/state_machine/: state_machine.cpp  state_machine.hpp
src/application/trace_entry/task_switch/: task_switch.cpp  task_switch.hpp
src/application/user_control/: command_line_arg.cpp  command_line_arg.hpp  user_input_handler.cpp  user_input_handler.hpp
src/export/sequence_diagram/: i_export_sequence.hpp
src/export/sequence_diagram/open_trace_viewer/: open_trace_viewer.cpp  open_trace_viewer.hpp
src/export/sequence_diagram/open_trace_viewer/test/: uint_test.cpp
src/export/sequence_diagram/puml/: export_puml.cpp  export_puml.hpp  export_puml_timing.cpp  export_puml_timing.hpp
src/import/task_objects/: i_import_object.hpp  import_object.cpp  import_object.hpp  test.cpp
src/import/trace_files/: i_import_trace.hpp
src/import/trace_files/txt_import/: import_trace.cpp  import_trace.hpp
src/manager/: manager.cpp  manager.hpp
src/manager/configuration/: config_handler.cpp  config_handler.hpp  config_types.hpp
src/manager/configuration/test/: invalid_input_type.json  invalid_output_type.json  no_input_file.json  uint_test.cpp  valid_config.json  valid_config_defaults.json
src/manager/user_control/: command_line_arg.cpp  command_line_arg.hpp  user_input_handler.cpp  user_input_handler.hpp
src/manager/user_control/test/: uint_test_command_line_arg.cpp  uint_test_user_input.cpp
src/platform/: device.cmake
src/test/: sys_test.cpp
src/test/expected_outputs/: open_trace_viewer.json  puml_01.txt  puml_02.txt
src/test/input_files/: config.json  config_open_trace_viewer.json  config_puml_sequence.json  config_puml_timing.json  qspy.txt  qspy_01.txt  qspy_ao.json
src/types/task_object/: task_object.cpp  task_object.hpp  test.cpp
src/types/trace_entry/: trace_entry.cpp  trace_entry.hpp
src/types/trace_entry/event_message/: event_message.cpp  event_message.hpp
src/types/trace_entry/notes/: note.cpp  note.hpp
src/types/trace_entry/state_machine/: state_machine.cpp  state_machine.hpp
src/types/trace_entry/task_switch/: task_switch.cpp  task_switch.hpp
test/input_files/: qpsy.txt  qspy_ao.json
(+11 files in other folders)
